--- a/css/movies.css
+++ b/css/movies.css
@@ -8,7 +8,8 @@
     flex-direction: column;
 }
 
-.movies {
+.movies, #updateForm {
+    padding: 15px;
     border: 1px solid black;
     margin: 15px;
     width: 50%;
